Added list of messages. Messages are now displayed when a contact is selected.

--- a/DistSystemsMessageSender/DistSystemsMessageSender/MainPage.xaml
+++ b/DistSystemsMessageSender/DistSystemsMessageSender/MainPage.xaml
@@ -8,9 +8,25 @@
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <ListBox x:Name="contactList" ItemsSource="{x:Bind contacts}" DisplayMemberPath="Name" HorizontalAlignment="Left" Height="1080" VerticalAlignment="Top" Width="618" BorderThickness="2" BorderBrush="Black" SelectionMode="Single" SelectionChanged="contactList_SelectionChanged"/>
-        <TextBlock x:Name="contactName" HorizontalAlignment="Left" Margin="623,10,0,0" TextWrapping="Wrap" Text="{Binding }" VerticalAlignment="Top" Height="105" Width="1287"/>
-        <ListBox x:Name="contactMessages" HorizontalAlignment="Center" Height="838" Margin="623,115,0,127" VerticalAlignment="Center" Width="1297" BorderThickness="2" BorderBrush="Black"/>
-        <TextBox x:Name="textBox" HorizontalAlignment="Left" Margin="623,958,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" RenderTransformOrigin="-0.17,-0.452" Height="122" Width="1297"/>
+        <ListBox x:Name="contactList" ItemsSource="{x:Bind contacts}" DisplayMemberPath="Name" HorizontalAlignment="Left" Height="710" VerticalAlignment="Top" Width="433" BorderThickness="2" BorderBrush="Black" SelectionMode="Single" SelectionChanged="contactList_SelectionChanged"/>
+        <TextBlock x:Name="contactName" HorizontalAlignment="Left" Margin="438,10,0,0" TextWrapping="Wrap" Text="{Binding }" VerticalAlignment="Top" Height="105" Width="842"/>
+        <ListView x:Name="contactMessages" HorizontalAlignment="Center" Height="473" Margin="433,115,10,132" VerticalAlignment="Center" Width="837" BorderThickness="2" BorderBrush="Black">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel>
+                        <TextBlock Text="{Binding sender}"
+                                   Margin="20,0,20,8"
+                                   FontSize="16"
+                                   FontWeight="SemiBold"
+                                   Foreground="DarkBlue" />
+                        <TextBlock Text="{Binding body}"
+                                   Margin="20,0,20,8"
+                                   FontSize="20"
+                                   Foreground="Black" />
+                    </StackPanel>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+        <TextBox x:Name="textBox" Margin="438,593,10,0" TextWrapping="Wrap" Text="Enter message here" VerticalAlignment="Top" RenderTransformOrigin="-0.17,-0.452" Height="122"/>
     </Grid>
 </Page>
